app.css
html, body {
  height: 100%;
  width: 100%;
  font-family: 'lato', sans-serif;
  font-size: 2vw;
}

.all-container{
  background: rgba(230,179,117,1);
  background: -moz-radial-gradient(center, ellipse cover, rgba(230,179,117,1) 0%, rgba(166,120,63,1) 50%, rgba(148,107,56,1) 51%, rgba(215,166,106,1) 100%);
  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(230,179,117,1)), color-stop(50%, rgba(166,120,63,1)), color-stop(51%, rgba(148,107,56,1)), color-stop(100%, rgba(215,166,106,1)));
  background: -webkit-radial-gradient(center, ellipse cover, rgba(230,179,117,1) 0%, rgba(166,120,63,1) 50%, rgba(148,107,56,1) 51%, rgba(215,166,106,1) 100%);
  background: -o-radial-gradient(center, ellipse cover, rgba(230,179,117,1) 0%, rgba(166,120,63,1) 50%, rgba(148,107,56,1) 51%, rgba(215,166,106,1) 100%);
  background: -ms-radial-gradient(center, ellipse cover, rgba(230,179,117,1) 0%, rgba(166,120,63,1) 50%, rgba(148,107,56,1) 51%, rgba(215,166,106,1) 100%);
  background: radial-gradient(ellipse at center, rgba(230,179,117,1) 0%, rgba(166,120,63,1) 50%, rgba(148,107,56,1) 51%, rgba(215,166,106,1) 100%);
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e6b375', endColorstr='#d7a66a', GradientType=1 );
  height: 100%;
}

.scores-container{
  position: absolute;
  top: 3%;
  left: 6%;
  height: 94%;
  width: 88%;
  z-index: 1;
  box-shadow: 2px 8px 20px black;
}

.scores-row{
  height: 100%;
  font-size: 3vw;
}

.score-global{
  color: #fe3a44;
  font-size: 5vw;
}

.score-round{
  color: white;
  font-size: 2.5vw;
}

.btn-n-dice-container{
  position: absolute;
  top: 3%;
  left: 35%;
  height: 90%;
  width: 30%;
  z-index: 2;
  max-height: 100vw;
}

.player1{
  background-color: #FDFEFE;
  height: 100%;
}

.player2{
  background-color: #F2F3F4;
  height: 100%;
}

.current {
  position: relative;
  left: 35%;
  top: 40%;
  width: 30%;
  height: 7vw;
  font-size: 1.5vw;
  background-color: #fe3a44;
}

#dice{
  width: 10vw;
  height: 10vw;
}
@media screen and (orientation: landscape) and (min-aspect-ratio:14/9) {
  .current {
    position: relative;
    left: 35%;
    top: 4%;
    width: 30%;
    height: 7vw;
    font-size: 1.5vw;
    background-color: #fe3a44;
  }
}
@media screen and (orientation: portrait) {
  html, body {
    font-size: 2vh;
  }
  
  .scores-row{
    font-size: 3vh;
  }
  
  .score-global{
    font-size: 5vh;
  }
  
  .score-round{
    font-size: 2.5vh;
  }
  
  .current {
    position: relative;
    left: 35%;
    top: 40%;
    width: 30%;
    height: 7vh;
    font-size: 1.5vh;
    background-color: #fe3a44;
  }
  #dice, #roll, #hold{
    position: relative;
    top: 60%;
  }

  #dice{
    width: 8vh;
    height: 8vh;
  }
}

@media screen and (orientation: portrait) and (max-width: 560px){
  .btn-n-dice-container{
    left: 30.5%;
    width: 40%;
  }

  .current {
    left: 10%;
    top: 40%;
    width: 80%;
    height: 7vh;
    font-size: 1.5vh;
  }
}

